[gd_scene load_steps=6 format=1]

[ext_resource path="res://Data/Player/Build_mode.gd" type="Script" id=1]
[ext_resource path="res://Data/Attacks/CreepBlast.png" type="Texture" id=2]
[ext_resource path="res://Data/Deployables/deployable box.png" type="Texture" id=3]
[ext_resource path="res://Data/Deployables/deployable box center.png" type="Texture" id=4]
[ext_resource path="res://Data/Shop/list_selector.png" type="Texture" id=5]

[node name="Build_mode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="follow" type="KinematicBody2D" parent="."]

editor/display_folded = true
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Camera2D" type="Camera2D" parent="follow"]

transform/pos = Vector2( 0, -200 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 100.0
drag_margin/right = 0.0
drag_margin/bottom = 1.0

[node name="Sprite" type="Sprite" parent="follow"]

visibility/visible = false
texture = ExtResource( 2 )

[node name="survivor_card" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="survivor_card"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="survivor_card"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 14.0
text = "open"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="survivor_card"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 12.0
margin/right = 104.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="survivor_card"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 24.0
margin/right = 80.0
margin/bottom = 38.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 40.0

[node name="desc" type="RichTextLabel" parent="description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 150.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="weapon" type="Control" parent="description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 108.0
margin/right = 41.0
margin/bottom = 148.0

[node name="Sprite" type="Sprite" parent="description/weapon"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="description/weapon"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 14.0
text = "empty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="description/weapon"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 12.0
margin/right = 104.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="headArmour" type="Control" parent="description"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 133.0
margin/right = 41.0
margin/bottom = 173.0

[node name="Sprite" type="Sprite" parent="description/headArmour"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="description/headArmour"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 14.0
text = "empty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="description/headArmour"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 12.0
margin/right = 104.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bodyArmour" type="Control" parent="description"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 158.0
margin/right = 41.0
margin/bottom = 198.0

[node name="Sprite" type="Sprite" parent="description/bodyArmour"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="description/bodyArmour"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 14.0
text = "empty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="description/bodyArmour"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 12.0
margin/right = 104.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="build_description" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 40.0

[node name="desc" type="RichTextLabel" parent="build_description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 150.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="supply_run_description" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 40.0

[node name="desc" type="RichTextLabel" parent="supply_run_description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 150.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="upgrade_description" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 40.0

[node name="desc" type="RichTextLabel" parent="upgrade_description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 150.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="build_upgrade" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="build_ui" type="Control" parent="build_upgrade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="deploys" type="Sprite" parent="build_upgrade/build_ui"]

editor/display_folded = true
centered = false
modulate = Color( 0, 0, 0, 1 )

[node name="description" type="Label" parent="build_upgrade/build_ui/deploys"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 207.0
margin/top = -25.0
margin/right = 265.0
margin/bottom = 25.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box0" type="Sprite" parent="build_upgrade/build_ui/deploys"]

editor/display_folded = true
transform/pos = Vector2( 12, 12 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="build_upgrade/build_ui/deploys/box0"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = -12.0
margin/right = 71.0
margin/bottom = 2.0
text = "Recruits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="build_upgrade/build_ui/deploys/box0"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -70.0
margin/top = -12.0
margin/right = -12.0
margin/bottom = 38.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="Sprite" parent="build_upgrade/build_ui/deploys"]

editor/display_folded = true
transform/pos = Vector2( 12, 35 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="build_upgrade/build_ui/deploys/box1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = -12.0
margin/right = 70.0
margin/bottom = 2.0
text = "Defences"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="build_upgrade/build_ui/deploys/box1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -70.0
margin/top = -12.0
margin/right = -12.0
margin/bottom = 38.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box2" type="Sprite" parent="build_upgrade/build_ui/deploys"]

editor/display_folded = true
transform/pos = Vector2( 12, 59 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="build_upgrade/build_ui/deploys/box2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = -12.0
margin/right = 70.0
margin/bottom = 2.0
text = "Buildings"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="build_upgrade/build_ui/deploys/box2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -70.0
margin/top = -12.0
margin/right = -12.0
margin/bottom = 38.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box3" type="Sprite" parent="build_upgrade/build_ui/deploys"]

editor/display_folded = true
transform/pos = Vector2( 12, 83 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="build_upgrade/build_ui/deploys/box3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = -12.0
margin/right = 70.0
margin/bottom = 2.0
text = "Deployments"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="build_upgrade/build_ui/deploys/box3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -70.0
margin/top = -12.0
margin/right = -12.0
margin/bottom = 38.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box9" type="Sprite" parent="build_upgrade/build_ui/deploys"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="build_upgrade/build_ui"]

transform/pos = Vector2( 134, 12 )

[node name="upgrade_ui" type="Control" parent="build_upgrade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="building" type="Control" parent="build_upgrade/upgrade_ui"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="build_upgrade/upgrade_ui/building"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 14.0
text = "bob"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="build_upgrade/upgrade_ui/building"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 14.0
margin/right = 40.0
margin/bottom = 28.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="selector" type="Sprite" parent="build_upgrade/upgrade_ui"]

texture = ExtResource( 5 )
centered = false

[node name="Position2D" type="Position2D" parent="build_upgrade/upgrade_ui"]

transform/pos = Vector2( 134, 0 )

[node name="survivor_ui" type="Control" parent="build_upgrade"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="yes_no" type="Control" parent="build_upgrade"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="build_upgrade/yes_no"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -146.0
margin/top = 0.0
margin/right = 146.0
margin/bottom = 14.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yes" type="Label" parent="build_upgrade/yes_no"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -48.0
margin/top = 19.0
margin/right = -8.0
margin/bottom = 33.0
text = "yes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="no" type="Label" parent="build_upgrade/yes_no"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 19.0
margin/right = 66.0
margin/bottom = 33.0
text = "No"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="build_upgrade/yes_no"]

texture = ExtResource( 5 )

[node name="inventory_ui" type="Control" parent="build_upgrade"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="selector" type="Sprite" parent="build_upgrade/inventory_ui"]

texture = ExtResource( 5 )
centered = false

[node name="carry_weight" type="Label" parent="build_upgrade/inventory_ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


